# TalkNet

./: Cargo.toml  README.md  protocol.txt
src/: main.rs
src/client/: Cargo.toml
src/client/source/: .#main.rs  Client.rs~  client.rs  client.rs~  main.rs
src/client/src/: main.rs
src/common/: Cargo.toml  connection.rs  mod.rs  user.rs
src/common/source/: connection.rs  mod.rs  type_protocol.rs  types_msg.rs  user.rs
src/server/: Cargo.toml  main.rs  main.rs~  server.rs  server.rs~
src/server/source/: .#server.rs  main.rs  room.rs  server.rs  server.rs~
src/server/src/: server.rs
