[package]
name = "chat_zone"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1",  features = ["derive"]}
common = {path = "src/common"}
serde_json = "1.0"

[workspace]
members = ["src/client", "src/server", "src/common"]

[[bin]]
name = "client"
path = "src/client/source/main.rs"

[[bin]]
name = "server"
path = "src/server/source/main.rs"